# app/Http/Controllers/Api/V1/Board/CreateBoard.php
@@ -5,22 +5,25 @@ namespace App\Http\Controllers\Api\V1\Board;
 use App\Domain\Board\Command\Create\Command;
 use App\Domain\Board\Command\Create\Handler;
 use App\Http\Controllers\Controller;
-use App\Http\Requests\Board\CreateBoardRequest;
 use Illuminate\Http\JsonResponse;
-use Illuminate\Http\Response;
+use Illuminate\Http\Request;
+use Illuminate\Support\Facades\Validator;
 
 /**
  * @OA\Post(
  *     path="/api/v1/board",
  *     tags={"Board"},
- *     summary="Adds a new board",
- *     @OA\RequestBody(ref="#/components/requestBodies/CreateBoardRequest"),
+ *     summary="Add a new board",
+ *     @OA\RequestBody(
+ *         @OA\JsonContent(
+ *             @OA\Property(property="name", type="string")
+ *         )
+ *     ),
  *     @OA\Response(
  *         response=201,
  *         description="Success",
  *         @OA\JsonContent(
  *             @OA\Property(property="id", type="string"),
- *             @OA\Examples(example=201, value={"id": "123e4567-e89b-12d3-a456-426614174000"}, summary="Success example")
  *         )
  *     ),
  *     @OA\Response(
@@ -28,27 +31,23 @@ use Illuminate\Http\Response;
  *         description="Validation error",
  *         @OA\JsonContent(
  *              @OA\Property(property="message", type="string"),
- *              @OA\Property(
- *                  property="errors",
- *                  @OA\Schema(
- *                      type="array",
- *                      @OA\Items(type="string")
- *                  )
- *              ),
- *             @OA\Examples(example=422, value={"message": "Invalid board name", "errors": "one"}, summary="Validation error example")
  *         )
  *     )
  * )
  */
 class CreateBoard extends Controller
 {
-    public function __invoke(CreateBoardRequest $request, Handler $handler, Response $response): JsonResponse
+    public function __invoke(Request $request, Handler $handler): JsonResponse
     {
-        $validated = $request->validated();
+        $validator = Validator::make($request->all(), [
+            'name' => 'bail|required|max:100'
+        ]);
+
+        $validator->validate();
 
         $user = \App\Domain\User\User::all()->first();
 
-        $command = new Command($validated['name'], $user);
+        $command = new Command($request->input('name'), $user);
 
         $boardId = $handler->handle($command);
 
@@ -57,3 +56,38 @@ class CreateBoard extends Controller
             ->setStatusCode(201);
     }
 }
+
+// todo that does not work:
+
+//#[OA\Post(
+//    path: '/api/v1/board',
+//    tags: ['Board'],
+//    summary: 'Adds a new board',
+//    requestBody: new OA\RequestBody(
+//        content: new OA\JsonContent(
+//            properties: [
+//                new OA\Property(property: 'string', name: 'name'),
+//            ]
+//        )
+//    ),
+//    responses: [
+//        new OA\Response(
+//            response: '201',
+//            description: 'Success',
+//            content: new OA\JsonContent(
+//                properties: [
+//                    new OA\Property(property: 'string', name: 'id')
+//                ]
+//            )
+//        ),
+//        new OA\Response(
+//            response: '422',
+//            description: 'Validation error',
+//            content: new OA\JsonContent(
+//                properties: [
+//                    new OA\Property(property: 'string', name: 'message')
+//                ]
+//            )
+//        ),
+//    ]
+//)]
