# public/docs/openapi.json
@@ -5,14 +5,76 @@
         "version": "0.1"
     },
     "paths": {
+        "/api/v1/auth/signup": {
+            "post": {
+                "tags": [
+                    "Auth"
+                ],
+                "summary": "Register a new user",
+                "requestBody": {
+                    "content": {
+                        "application/json": {
+                            "schema": {
+                                "properties": {
+                                    "name": {
+                                        "type": "string"
+                                    },
+                                    "email": {
+                                        "type": "string"
+                                    },
+                                    "password": {
+                                        "type": "string"
+                                    },
+                                    "password_confirmation": {
+                                        "type": "string"
+                                    }
+                                },
+                                "type": "object"
+                            }
+                        }
+                    }
+                },
+                "responses": {
+                    "201": {
+                        "description": "Success"
+                    },
+                    "422": {
+                        "description": "Validation error",
+                        "content": {
+                            "application/json": {
+                                "schema": {
+                                    "properties": {
+                                        "message": {
+                                            "type": "string"
+                                        }
+                                    },
+                                    "type": "object"
+                                }
+                            }
+                        }
+                    }
+                }
+            }
+        },
         "/api/v1/board": {
             "post": {
                 "tags": [
                     "Board"
                 ],
-                "summary": "Adds a new board",
+                "summary": "Add a new board",
                 "requestBody": {
-                    "$ref": "#/components/requestBodies/CreateBoardRequest"
+                    "content": {
+                        "application/json": {
+                            "schema": {
+                                "properties": {
+                                    "name": {
+                                        "type": "string"
+                                    }
+                                },
+                                "type": "object"
+                            }
+                        }
+                    }
                 },
                 "responses": {
                     "201": {
@@ -26,14 +88,6 @@
                                         }
                                     },
                                     "type": "object"
-                                },
-                                "examples": {
-                                    "201": {
-                                        "summary": "Success example",
-                                        "value": {
-                                            "id": "123e4567-e89b-12d3-a456-426614174000"
-                                        }
-                                    }
                                 }
                             }
                         }
@@ -46,40 +100,11 @@
                                     "properties": {
                                         "message": {
                                             "type": "string"
-                                        },
-                                        "errors": {}
+                                        }
                                     },
                                     "type": "object"
-                                },
-                                "examples": {
-                                    "422": {
-                                        "summary": "Validation error example",
-                                        "value": {
-                                            "message": "Invalid board name",
-                                            "errors": "one"
-                                        }
-                                    }
                                 }
                             }
-                        }
-                    }
-                }
-            }
-        }
-    },
-    "components": {
-        "requestBodies": {
-            "CreateBoardRequest": {
-                "description": "Create board",
-                "content": {
-                    "application/json": {
-                        "schema": {
-                            "properties": {
-                                "name": {
-                                    "type": "string"
-                                }
-                            },
-                            "type": "object"
                         }
                     }
                 }
